--- a/Views/Movies/Index.cshtml
+++ b/Views/Movies/Index.cshtml
@@ -10,7 +10,7 @@
     <a asp-action="Create">Novo Filme</a>
 </p>
 <form asp-controller="Movies" asp-action="Index" method="GET">
-    <select asp-for="Genres" asp-items="Model.Genres">
+    <select asp-for="Genre" asp-items="Model.Genres">
         <option value="">Todos</option>
     </select>
     <div class="form-group">
@@ -35,6 +35,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Movies[0].Price)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Movies[0].Rating)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -53,6 +56,9 @@
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Price)
+                </td>
+                <td>
+                    @Html.DisplayFor(modelItem => item.Rating)
                 </td>
                 <td>
                     <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
